// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Document Class New Instance Initializes with Desired Document Model 1`] = `
Object {
  "declaration": Object {
    "attributes": Object {
      "encoding": "UTF-8",
      "standalone": "yes",
      "version": "1.0",
    },
  },
  "elements": Array [
    Object {
      "attributes": Object {
        "ContainsContext": true,
        "SchemaRevision": "1.0",
      },
      "elements": Array [
        Object {
          "attributes": Object {
            "Use": "context",
          },
          "elements": Array [],
          "name": "Controller",
          "type": "element",
        },
      ],
      "name": "RSLogix5000Content",
      "type": "element",
    },
  ],
}
`;

exports[`Document Class New Instance Initializes with Desired Document Model 2`] = `
Object {
  "declaration": Object {
    "attributes": Object {
      "encoding": "UTF-8",
      "standalone": "yes",
      "version": "1.0",
    },
  },
  "elements": Array [
    Object {
      "attributes": Object {
        "ContainsContext": "true",
        "ExportDate": "Tue Aug 29 09:06:17 2017",
        "ExportOptions": "References NoRawData L5KData DecoratedData Context Dependencies ForceProtectedEncoding AllProjDocTrans",
        "Owner": "Operator",
        "SchemaRevision": "1.0",
        "SoftwareRevision": "28.00",
        "TargetName": "PB_OneButton",
        "TargetType": "DataType",
      },
      "elements": Array [
        Object {
          "attributes": Object {
            "Name": "TRW_10673_Final",
            "Use": "Context",
          },
          "elements": Array [
            Object {
              "attributes": Object {
                "Use": "Context",
              },
              "elements": Array [
                Object {
                  "attributes": Object {
                    "Class": "User",
                    "Family": "NoFamily",
                    "Name": "PB_OneButton",
                    "Use": "Target",
                  },
                  "elements": Array [
                    Object {
                      "elements": Array [
                        Object {
                          "attributes": Object {
                            "DataType": "SINT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "true",
                            "Name": "ZZZZZZZZZZPB_OneButt0",
                            "Radix": "Decimal",
                          },
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "BitNumber": "0",
                            "DataType": "BIT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "Push",
                            "Radix": "Decimal",
                            "Target": "ZZZZZZZZZZPB_OneButt0",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "BitNumber": "1",
                            "DataType": "BIT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "State",
                            "Radix": "Decimal",
                            "Target": "ZZZZZZZZZZPB_OneButt0",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "BitNumber": "2",
                            "DataType": "BIT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "Visibility",
                            "Radix": "Decimal",
                            "Target": "ZZZZZZZZZZPB_OneButt0",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "BitNumber": "3",
                            "DataType": "BIT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "Ind",
                            "Radix": "Decimal",
                            "Target": "ZZZZZZZZZZPB_OneButt0",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "BitNumber": "4",
                            "DataType": "BIT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "Interlock",
                            "Radix": "Decimal",
                            "Target": "ZZZZZZZZZZPB_OneButt0",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "BitNumber": "5",
                            "DataType": "BIT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "ONS",
                            "Radix": "Decimal",
                            "Target": "ZZZZZZZZZZPB_OneButt0",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "DataType": "TIMER",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "Tmr",
                            "Radix": "NullType",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                      ],
                      "name": "Members",
                      "type": "element",
                    },
                  ],
                  "name": "DataType",
                  "type": "element",
                },
              ],
              "name": "DataTypes",
              "type": "element",
            },
          ],
          "name": "Controller",
          "type": "element",
        },
      ],
      "name": "RSLogix5000Content",
      "type": "element",
    },
  ],
}
`;

exports[`Document Class Public Methods Find: Finds Document Elements 1`] = `
Object {
  "attributes": Object {
    "Name": "TRW_10673_Final",
    "Use": "Context",
  },
  "elements": Array [
    Object {
      "attributes": Object {
        "Use": "Context",
      },
      "elements": Array [
        Object {
          "attributes": Object {
            "Class": "User",
            "Family": "NoFamily",
            "Name": "PB_OneButton",
            "Use": "Target",
          },
          "elements": Array [
            Object {
              "elements": Array [
                Object {
                  "attributes": Object {
                    "DataType": "SINT",
                    "Dimension": "0",
                    "ExternalAccess": "Read/Write",
                    "Hidden": "true",
                    "Name": "ZZZZZZZZZZPB_OneButt0",
                    "Radix": "Decimal",
                  },
                  "name": "Member",
                  "type": "element",
                },
                Object {
                  "attributes": Object {
                    "BitNumber": "0",
                    "DataType": "BIT",
                    "Dimension": "0",
                    "ExternalAccess": "Read/Write",
                    "Hidden": "false",
                    "Name": "Push",
                    "Radix": "Decimal",
                    "Target": "ZZZZZZZZZZPB_OneButt0",
                  },
                  "elements": Array [
                    Object {
                      "elements": Array [
                        Object {
                          "cdata": "*",
                          "type": "cdata",
                        },
                      ],
                      "name": "Description",
                      "type": "element",
                    },
                  ],
                  "name": "Member",
                  "type": "element",
                },
                Object {
                  "attributes": Object {
                    "BitNumber": "1",
                    "DataType": "BIT",
                    "Dimension": "0",
                    "ExternalAccess": "Read/Write",
                    "Hidden": "false",
                    "Name": "State",
                    "Radix": "Decimal",
                    "Target": "ZZZZZZZZZZPB_OneButt0",
                  },
                  "elements": Array [
                    Object {
                      "elements": Array [
                        Object {
                          "cdata": "*",
                          "type": "cdata",
                        },
                      ],
                      "name": "Description",
                      "type": "element",
                    },
                  ],
                  "name": "Member",
                  "type": "element",
                },
                Object {
                  "attributes": Object {
                    "BitNumber": "2",
                    "DataType": "BIT",
                    "Dimension": "0",
                    "ExternalAccess": "Read/Write",
                    "Hidden": "false",
                    "Name": "Visibility",
                    "Radix": "Decimal",
                    "Target": "ZZZZZZZZZZPB_OneButt0",
                  },
                  "elements": Array [
                    Object {
                      "elements": Array [
                        Object {
                          "cdata": "*",
                          "type": "cdata",
                        },
                      ],
                      "name": "Description",
                      "type": "element",
                    },
                  ],
                  "name": "Member",
                  "type": "element",
                },
                Object {
                  "attributes": Object {
                    "BitNumber": "3",
                    "DataType": "BIT",
                    "Dimension": "0",
                    "ExternalAccess": "Read/Write",
                    "Hidden": "false",
                    "Name": "Ind",
                    "Radix": "Decimal",
                    "Target": "ZZZZZZZZZZPB_OneButt0",
                  },
                  "elements": Array [
                    Object {
                      "elements": Array [
                        Object {
                          "cdata": "*",
                          "type": "cdata",
                        },
                      ],
                      "name": "Description",
                      "type": "element",
                    },
                  ],
                  "name": "Member",
                  "type": "element",
                },
                Object {
                  "attributes": Object {
                    "BitNumber": "4",
                    "DataType": "BIT",
                    "Dimension": "0",
                    "ExternalAccess": "Read/Write",
                    "Hidden": "false",
                    "Name": "Interlock",
                    "Radix": "Decimal",
                    "Target": "ZZZZZZZZZZPB_OneButt0",
                  },
                  "elements": Array [
                    Object {
                      "elements": Array [
                        Object {
                          "cdata": "*",
                          "type": "cdata",
                        },
                      ],
                      "name": "Description",
                      "type": "element",
                    },
                  ],
                  "name": "Member",
                  "type": "element",
                },
                Object {
                  "attributes": Object {
                    "BitNumber": "5",
                    "DataType": "BIT",
                    "Dimension": "0",
                    "ExternalAccess": "Read/Write",
                    "Hidden": "false",
                    "Name": "ONS",
                    "Radix": "Decimal",
                    "Target": "ZZZZZZZZZZPB_OneButt0",
                  },
                  "elements": Array [
                    Object {
                      "elements": Array [
                        Object {
                          "cdata": "*",
                          "type": "cdata",
                        },
                      ],
                      "name": "Description",
                      "type": "element",
                    },
                  ],
                  "name": "Member",
                  "type": "element",
                },
                Object {
                  "attributes": Object {
                    "DataType": "TIMER",
                    "Dimension": "0",
                    "ExternalAccess": "Read/Write",
                    "Hidden": "false",
                    "Name": "Tmr",
                    "Radix": "NullType",
                  },
                  "elements": Array [
                    Object {
                      "elements": Array [
                        Object {
                          "cdata": "*",
                          "type": "cdata",
                        },
                      ],
                      "name": "Description",
                      "type": "element",
                    },
                  ],
                  "name": "Member",
                  "type": "element",
                },
              ],
              "name": "Members",
              "type": "element",
            },
          ],
          "name": "DataType",
          "type": "element",
        },
      ],
      "name": "DataTypes",
      "type": "element",
    },
  ],
  "name": "Controller",
  "type": "element",
}
`;

exports[`Document Class Public Methods Find: Finds Document Elements 2`] = `
Object {
  "attributes": Object {
    "Use": "context",
  },
  "elements": Array [],
  "name": "Controller",
  "type": "element",
}
`;

exports[`Document Class Public Methods Find: Finds Document Elements 3`] = `
Object {
  "attributes": Object {
    "BitNumber": "0",
    "DataType": "BIT",
    "Dimension": "0",
    "ExternalAccess": "Read/Write",
    "Hidden": "false",
    "Name": "Push",
    "Radix": "Decimal",
    "Target": "ZZZZZZZZZZPB_OneButt0",
  },
  "elements": Array [
    Object {
      "elements": Array [
        Object {
          "cdata": "*",
          "type": "cdata",
        },
      ],
      "name": "Description",
      "type": "element",
    },
  ],
  "name": "Member",
  "type": "element",
}
`;
